# gaia-matrix

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  LICENSE.md  README.md  build.sh  claude.md  dev_server.sh  restart.sh
docs/: ai-assistance.md  aopl-reference.md  api-reference.md  cross-platform.md  neural-engine.md  web-compiler.md
examples/: player.aopl
include/: gaia_matrix.h
include/gaia_matrix/: aopl.h  core.h  editor.h  neural_engine.h  platform.h  renderer.h  web_compiler.h
src/: main.cpp
src/ai/: neural_engine.cpp
src/aopl/: parser.cpp
src/core/: engine.cpp
src/editor/: editor.cpp
src/platform/: platform.cpp
src/renderer/: renderer.cpp
src/web/: web_compiler.cpp
tests/: CMakeLists.txt  README.md
tests/aopl/: parser_tests.cpp
tests/core/: engine_tests.cpp
tests/neural/: neural_engine_tests.cpp
tests/platform/: platform_tests.cpp
tests/resources/: test_model.onnx
tests/test_utils/: mock_neural_engine.cpp  mock_neural_engine.h  test_helpers.cpp  test_helpers.h
